--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@ current: index
   </section>
   <section class="gear container-fluid position-relative bg-secondary-light">
     <div class="row">
-      <div class="col-lg-6 bg-gear" data-aos="slide-right"></div>
+      <div class="col-lg-6 bg-gear" data-aos="slide-left"></div>
     </div>
     <h2 data-aos="slide-right" class="mb-4 gearTitle position-absolute font-title fw-bold text-end title-lg">One Gear,<span class="mt-4 d-block">Many Variations</span></h2>
     <a class="readBtn d-block position-absolute d-flex" href="javascript:;">
@@ -75,7 +75,7 @@ current: index
     <div class="container h-100">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-6 bg-performance" data-aos="slide-right"></div>
+          <div class="col-lg-6 bg-performance" data-aos="slide-left"></div>
         </div>
       </div>
       <h2 data-aos="slide-right" class="mb-4 performanceTitle position-absolute font-title fw-bold title-lg">
@@ -136,7 +136,7 @@ current: index
         </div>
       </div>
       <div class="col-md-4 mb-4 mb-md-0">
-        <div class="card" data-aos="slide-up" data-aos-duration="800">
+        <div class="card" data-aos="slide-up" data-aos-delay="200">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week7/img6.jpg"
             class="card-img-top mb-4" alt="feature-img">
           <div class="card-body">
@@ -149,7 +149,7 @@ current: index
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card" data-aos="slide-up" data-aos-duration="1600">
+        <div class="card" data-aos="slide-up" data-aos-delay="400">
           <img src="./assets/images/img7.jpg"
             class="card-img-top mb-4" alt="feature-img">
           <div class="card-body">
