--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@ current: index
     <div class="container h-100">
       <div class="row align-items-center h-100">
         <div class="col-lg-6">
-          <h2 data-aos="slide-right" class="fa-1 mb-6 font-title fw-bold">Single Speed, Single Life.</h2>
+          <h2 data-aos="slide-right" class="fs-1 mb-6 font-title fw-bold">Single Speed, Single Life.</h2>
           <div class="row mb-6">
             <div class="col-lg-10" data-aos="slide-right">
               <p class="mb-0">
@@ -122,8 +122,8 @@ current: index
     </div>
   </section>
   <section class="features container py-7">
-    <div class="row">
-      <div class="col-md-4 mb-4 mb-md-0">
+    <ul class="row">
+      <li class="col-md-4 mb-4 mb-md-0">
         <div class="card" data-aos="slide-up">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week7/img5.jpg" class="card-img-top mb-4" alt="feature-img">
           <div class="card-body">
@@ -134,8 +134,8 @@ current: index
             </p>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 mb-4 mb-md-0">
+      </li>
+      <li class="col-md-4 mb-4 mb-md-0">
         <div class="card" data-aos="slide-up" data-aos-delay="200">
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week7/img6.jpg"
             class="card-img-top mb-4" alt="feature-img">
@@ -147,8 +147,8 @@ current: index
             </p>
           </div>
         </div>
-      </div>
-      <div class="col-md-4">
+      </li>
+      <li class="col-md-4">
         <div class="card" data-aos="slide-up" data-aos-delay="400">
           <img src="./assets/images/img7.jpg"
             class="card-img-top mb-4" alt="feature-img">
@@ -160,7 +160,7 @@ current: index
             </p>
           </div>
         </div>
-      </div>
-    </div>
+      </li>
+    </ul>
   </section>
 </main>
