--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@ current: index
       </div>
       <div class="container-fluid d-none d-lg-block">
         <div class="row">
-          <div class="col-lg-6 bg-collection" data-aos="slide-right"></div>
+          <div class="col-lg-6 bg-collection" data-aos="slide-left"></div>
           <div class="col-lg-6 bg-collectionBtn align-self-end">
             <div class="collectBtn d-flex align-items-center">
               <a class="d-block" href="javacript:;">
